load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_executable",
    "ocaml_module",
)

GENERATE_KEYPAIR_DEPS = ["@mina//src/lib/cli_lib"]

GENERATE_KEYPAIR_DEPS_OPAM = ["core_kernel"]

GENERATE_KEYPAIR_PPX = "@//bzl/ppx/exe:ppx_version__ppx_let__ppx_sexp_conv__ppx_optcomp"

#################
ocaml_executable(
    name = "generate_keypair",
    deps = [":_Generate_keypair"],
    visibility = ["//visibility:public"],
)

#############
ocaml_module(
    name   = "_Generate_keypair",
    struct = "generate_keypair.ml",
    ppx = GENERATE_KEYPAIR_PPX,
    deps = GENERATE_KEYPAIR_DEPS,
    deps_opam = GENERATE_KEYPAIR_DEPS_OPAM
)
