workspace(name = "libp2p_helper")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")  # buildifier: disable=load

# gazelle:proto disable_global
load("//:WORKSPACE.bzl", "libp2p_fetch_go_rules", "libp2p_fetch_go_libs")

# gazelle:repository_macro WORKSPACE.bzl%libp2p_fetch_go_rules
libp2p_fetch_go_rules()

load(
    "@io_bazel_rules_go//go:deps.bzl",
    "go_download_sdk",
    "go_register_toolchains",
    "go_rules_dependencies",
)

go_download_sdk(
    name = "go_sdk",
    version = "1.13",
)

go_rules_dependencies()

go_register_toolchains()

load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()

load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies", "go_repository")

# gazelle:repository_macro WORKSPACE.bzl%libp2p_fetch_go_libs
libp2p_fetch_go_libs(go_repository)

gazelle_dependencies(go_repository_default_config = "@//:WORKSPACE.bazel")
