load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_executable",
    "ocaml_module",
)

################################################################
## STANZA 1: EXECUTABLE LOGPROC
################################################################
LOGPROC_EXECUTABLE_OPTS = []

LOGPROC_MODULE_OPTS = []

LOGPROC_DEPS = [
    # do not sort (buildifier)
    "@mina//src/lib/logproc_lib",
    "@mina//src/lib/bash_colors",
    "@mina//src/lib/logger",
]

LOGPROC_DEPS_OPAM = [
    "core",
    "yojson",
    "angstrom",
    "cmdliner",
]

LOGPROC_PPX = "@//bzl/ppx/exe:ppx_version__ppx_jane__ppx_deriving.std"

LOGPROC_PPX_ARGS = [
    # do not sort (buildifier)
    "-inline-test-lib",
    "logproc",
]

#################
ocaml_executable(
    name = "logproc",
    visibility = ["//visibility:public"],
    deps = [":_Logproc"]
)

#############
ocaml_module(
    name   = "_Logproc",
    struct = "logproc.ml",
    ppx = LOGPROC_PPX,
    ppx_args = LOGPROC_PPX_ARGS,
    deps = LOGPROC_DEPS,
    deps_opam = LOGPROC_DEPS_OPAM
)
