load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_executable",
    "ocaml_module",
)
load(
    "//:BUILD.bzl",
    "CONFIG_MLH",
)

################################################################
## STANZA 1: EXECUTABLE MISSING_BLOCKS_AUDITOR
################################################################
MISSING_BLOCKS_AUDITOR_EXECUTABLE_OPTS = []

MISSING_BLOCKS_AUDITOR_MODULE_OPTS = []

MISSING_BLOCKS_AUDITOR_DEPS = [
    # do not sort (buildifier)
    "@mina//src/lib/logger",
]

MISSING_BLOCKS_AUDITOR_DEPS_OPAM = [
    "async",
    "core_kernel",
    "caqti",
    "caqti-async",
    "caqti-driver-postgresql",
]

MISSING_BLOCKS_AUDITOR_PPX = "@//bzl/ppx/exe:ppx_coda__ppx_version__ppx_let"

#################
ocaml_executable(
    name = "missing_blocks_auditor",
    visibility = ["//visibility:public"],
    deps = [
        # do not sort (buildifier)
        ":_Missing_blocks_auditor",
        # ":_Sql",
    ],
)

#############
ocaml_module(
    name   = "_Missing_blocks_auditor",
    struct = "missing_blocks_auditor.ml",
    ppx = MISSING_BLOCKS_AUDITOR_PPX,
    ppx_data = CONFIG_MLH,
    deps = MISSING_BLOCKS_AUDITOR_DEPS + [
        ":_Sql"                 # obazl:retain
    ],
    deps_opam = MISSING_BLOCKS_AUDITOR_DEPS_OPAM
)

#############
ocaml_module(
    name   = "_Sql",
    struct = "sql.ml",
    ppx = MISSING_BLOCKS_AUDITOR_PPX,
    ppx_data = CONFIG_MLH,
    deps = MISSING_BLOCKS_AUDITOR_DEPS,
    deps_opam = MISSING_BLOCKS_AUDITOR_DEPS_OPAM
)
