load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_executable",
    "ocaml_module",
)

REFORMAT_DEPS_OPAM = [
    "core",
    "async",
]

REFORMAT_PPX = "@//bzl/ppx/exe:ppx_jane"

REFORMAT_PPX_ARGS = [
    # do not sort (buildifier)
    "-inline-test-lib",
    "reformat",
]

#################
ocaml_executable(
    name = "reformat",
    visibility = ["//visibility:public"],
    deps = [":_Reformat"]
)

#############
ocaml_module(
    name   = "_Reformat",
    struct = "reformat.ml",
    ppx = REFORMAT_PPX,
    ppx_args = REFORMAT_PPX_ARGS,
    deps_opam = REFORMAT_DEPS_OPAM
)
