load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_executable",
    "ocaml_signature",
    "ocaml_module",
    "ppx_executable",
)

TEST_EXECUTIVE_DEPS = [
    # do not sort (buildifier)
    "@mina//src/lib/file_system",
    "@mina//src/lib/currency",
    "@mina//src/lib/mina_base",
    "@mina//src/lib/runtime_config",
    "@mina//src/lib/signature_lib",
    "@mina//src/lib/secrets",
    "@mina//src/lib/integration_test_lib",
    "@mina//src/lib/integration_test_cloud_engine",
    "@mina//src/lib/bash_colors",
]

TEST_EXECUTIVE_DEPS_OPAM = [
    "core_kernel",
    "yojson",
    "cmdliner",
]

#################
ocaml_executable(
    name = "test_executive",
    visibility = ["//visibility:public"],
    deps = [
        # do not sort (buildifier)
        # ":_Block_production_test",
        # ":_Block_production_test_timed_accounts",
        # ":_Bootstrap_test",
        # ":_Mina_peers_test",
        # ":_Payments_timed_accounts",
        # ":_Send_payment_test",
        ":_Test_executive",
    ],
)

#############
ocaml_module(
    name = "_Block_production_test",
    struct = "block_production_test.ml",
    sig  = ":_Block_production_test.cmi",
    ppx = ":ppx1.exe",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "test_executive",
    ],
    deps = TEST_EXECUTIVE_DEPS,
    deps_opam = TEST_EXECUTIVE_DEPS_OPAM
)

################
ocaml_signature(
    name = "_Block_production_test.cmi",
    src  = "block_production_test.mli",
    ppx = ":ppx1.exe",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "test_executive",
    ],
    deps = TEST_EXECUTIVE_DEPS,
    deps_opam = TEST_EXECUTIVE_DEPS_OPAM
)

#############
ocaml_module(
    name = "_Block_production_test_timed_accounts",
    struct = "block_production_test_timed_accounts.ml",
    ppx = ":ppx1.exe",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "test_executive",
    ],
    deps = TEST_EXECUTIVE_DEPS,
    deps_opam = TEST_EXECUTIVE_DEPS_OPAM
)

#############
ocaml_module(
    name = "_Bootstrap_test",
    struct = "bootstrap_test.ml",
    sig  = ":_Bootstrap_test.cmi",
    ppx = ":ppx1.exe",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "test_executive",
    ],
    deps = TEST_EXECUTIVE_DEPS,
    deps_opam = TEST_EXECUTIVE_DEPS_OPAM
)

################
ocaml_signature(
    name = "_Bootstrap_test.cmi",
    src  = "bootstrap_test.mli",
    ppx = ":ppx1.exe",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "test_executive",
    ],
    deps = TEST_EXECUTIVE_DEPS,
    deps_opam = TEST_EXECUTIVE_DEPS_OPAM
)

#############
ocaml_module(
    name = "_Mina_peers_test",
    struct = "mina_peers_test.ml",
    ppx = ":ppx1.exe",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "test_executive",
    ],
    deps = TEST_EXECUTIVE_DEPS,
    deps_opam = TEST_EXECUTIVE_DEPS_OPAM
)

#############
ocaml_module(
    name = "_Payments_timed_accounts",
    struct = "payments_timed_accounts.ml",
    ppx = ":ppx1.exe",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "test_executive",
    ],
    deps = TEST_EXECUTIVE_DEPS,
    deps_opam = TEST_EXECUTIVE_DEPS_OPAM
)

#############
ocaml_module(
    name = "_Send_payment_test",
    struct = "send_payment_test.ml",
    ppx = ":ppx1.exe",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "test_executive",
    ],
    deps = TEST_EXECUTIVE_DEPS,
    deps_opam = TEST_EXECUTIVE_DEPS_OPAM
)

#############
ocaml_module(
    name = "_Test_executive",
    struct = "test_executive.ml",
    ppx = ":ppx1.exe",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "test_executive",
    ],
    deps = TEST_EXECUTIVE_DEPS + [
        # do not sort (buildifier)
        ":_Block_production_test",
        ":_Block_production_test_timed_accounts",
        ":_Bootstrap_test",
        ":_Mina_peers_test",
        ":_Payments_timed_accounts",
        ":_Send_payment_test",
    ],
    deps_opam = TEST_EXECUTIVE_DEPS_OPAM
)

###############
ppx_executable(
    name = "ppx1.exe",
    deps_adjunct_opam = [
        "ppx_expect.collector",
        "yojson",
        "ppx_hash.runtime-lib",
        "ppx_deriving_yojson.runtime",
        "ppx_sexp_conv.runtime-lib",
        "ppx_assert.runtime-lib",
        "ppx_compare.runtime-lib",
        "ppx_inline_test.runtime-lib",
        "ppx_bench.runtime-lib",
        "ppx_enumerate.runtime-lib",
        "ppx_module_timer.runtime",
    ],
    main = "//bzl/ppx/exe:ppxlib_driver",
    opts = [],
    visibility = [
        "//src/app/test_executive:__pkg__",
    ],
    deps = [
        "@mina//src/lib/ppx_coda",
        "@ppx_version//src:ppx_version",
    ],
    deps_opam = [
        "ppx_deriving_yojson",
        "ppx_jane",
        "ppxlib",
    ]
)
