""" config/coinbase

Configuration flag and constants for coinbase parameter.
"""

load("@bazel_skylib//rules:common_settings.bzl", "int_flag", "int_setting")

package(default_visibility = ["//visibility:public"])

int_flag( name = "coinbase", build_setting_default = 20)

int_setting( name = "standard", build_setting_default = 20)
int_setting( name = "realistic", build_setting_default = 720)

