"""config/proof_level

Configuration flag and constants for proof level.
"""

load("@bazel_skylib//rules:common_settings.bzl", "string_flag", "string_setting")

package(default_visibility = ["//visibility:public"])

string_flag( name = "proof_level", build_setting_default = "check",
             values = ["none", "check", "full"])

string_setting( name = "full",  build_setting_default = "full")
string_setting( name = "check", build_setting_default = "check")
string_setting( name = "none",  build_setting_default = "none")

