load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_module",
)

#############
ocaml_module(
    name = "best_tip_prover",
    ppx = "//bzl/ppx/exe:ppx_coda__ppx_version__ppx_jane__ppx_deriving.eq",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "best_tip_prover",
    ],
    struct = "best_tip_prover.ml",
    visibility = ["//visibility:public"],
    deps = [
        "@mina//src/lib/coda_intf",
        "@mina//src/lib/consensus",
        "@mina//src/lib/mina_base",
        "@mina//src/lib/transition_chain_prover",
        "@mina//src/lib/transition_frontier",
    ],
    deps_opam = [
        "core_kernel",
    ]
)
