load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_module",
    "ocaml_ns_archive",
)

#################
ocaml_ns_archive(
    name = "bignum_bigint",
    submodules = [
        ":_Bignum_bigint"
    ],
    visibility = [
        "//visibility:public",
    ],
)

#############
ocaml_module(
    name = "_Bignum_bigint",
    ppx = "//bzl/ppx/exe:ppx_version__ppx_jane",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "bignum_bigint",
    ],
    struct = "bignum_bigint.ml",
    visibility = ["//visibility:public"],
    deps = [
        "@snarky//fold_lib:fold_lib",
    ],
    deps_opam = [
        "async_kernel",
        "bignum",
        "core_kernel",
    ]
)
