load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_archive",
    "ocaml_signature",
    "ocaml_module",
    "ocaml_ns_library",
)

################################################################
## STANZA 1: LIBRARY BLAKE2
################################################################
BLAKE2_INTERFACE_OPTS = []

BLAKE2_MODULE_OPTS = []

BLAKE2_DEPS_OPAM = [
    "core_kernel",
    "digestif.c",
]

BLAKE2_PPX = "@//bzl/ppx/exe:ppx_jane__ppx_coda__ppx_version__ppx_deriving.eq__ppx_deriving_yojson"

BLAKE2_PPX_ARGS = [
    # do not sort (buildifier)
    "-inline-test-lib",
    "blake2",
]

#########
ocaml_ns_library(
    name = "#blake2",
    submodules = [
        ":_Blake2",
        ":_Intf",
    ],
    visibility = [
        "//src/lib/cache_dir:__pkg__",
        "//src/lib/genesis_constants:__pkg__",
        "//src/lib/signature_lib:__pkg__",
        "//src/lib/snarky_blake2:__pkg__"
    ],
)

#############
ocaml_module(
    name = "_Blake2",
    sig  = ":_Blake2.cmi",
    opts = BLAKE2_MODULE_OPTS,
    ppx = BLAKE2_PPX,
    ppx_args = BLAKE2_PPX_ARGS,
    struct = "blake2.ml",
    deps_opam = BLAKE2_DEPS_OPAM,
    deps = [
        "@ppx_version//src/runtime:#ppx_version_runtime",
    ],
)

################
ocaml_signature(
    name = "_Blake2.cmi",
    src = "blake2.mli",
    opts = BLAKE2_INTERFACE_OPTS,
    ppx = BLAKE2_PPX,
    ppx_args = BLAKE2_PPX_ARGS,
    deps = [
        ":_Intf",
        "@ppx_version//src/runtime:#ppx_version_runtime",
    ],
    deps_opam = BLAKE2_DEPS_OPAM
)

#############
ocaml_module(
    name = "_Intf",
    opts = BLAKE2_MODULE_OPTS,
    ppx = BLAKE2_PPX,
    ppx_args = BLAKE2_PPX_ARGS,
    struct = "intf.ml",
    deps_opam = BLAKE2_DEPS_OPAM,
    deps = [
        "@ppx_version//src/runtime:#ppx_version_runtime",
    ],
)
