load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_module",
    "ocaml_ns_library",
    "ocaml_signature",
    "ppx_executable",
)

################################################################
## STANZA 1: LIBRARY BLOCKCHAIN_SNARK
################################################################
BLOCKCHAIN_SNARK_INTERFACE_OPTS = []

BLOCKCHAIN_SNARK_MODULE_OPTS = []

BLOCKCHAIN_SNARK_DEPS = [
    # do not sort (buildifier)
    "@mina//src/lib/cache_dir",
    "@snarky//src/base:snarky_backendless",
    "@mina//src/lib/snark_params",
    "@mina//src/lib/mina_base",
    "@mina//src/lib/coda_state",
    "@mina//src/lib/transaction_snark",
    "@mina//src/lib/bignum_bigint",
    "@mina//src/lib/consensus",
]

BLOCKCHAIN_SNARK_DEPS_OPAM = [
    "core",
]

#########
ocaml_ns_library(
    name = "blockchain_snark",
    submodules = [
        ":_Blockchain",
        ":_Blockchain_snark_state"
    ],
    visibility = [
        "//visibility:public",
    ]
)

#############
ocaml_module(
    name = "_Blockchain",
    struct = "blockchain.ml",
    sig = ":_Blockchain.cmi",
    opts = BLOCKCHAIN_SNARK_MODULE_OPTS + [
        "-w", "-32" # unused value
    ],
    ppx = ":ppx1.exe",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "blockchain_snark",
    ],
    deps = BLOCKCHAIN_SNARK_DEPS,
    deps_opam = BLOCKCHAIN_SNARK_DEPS_OPAM
)

################
ocaml_signature(
    name = "_Blockchain.cmi",
    src = "blockchain.mli",
    opts = BLOCKCHAIN_SNARK_INTERFACE_OPTS,
    ppx = ":ppx1.exe",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "blockchain_snark",
    ],
    deps = BLOCKCHAIN_SNARK_DEPS,
    deps_opam = BLOCKCHAIN_SNARK_DEPS_OPAM
)

#############
ocaml_module(
    name = "_Blockchain_snark_state",
    opts = BLOCKCHAIN_SNARK_MODULE_OPTS,
    ppx = ":ppx1.exe",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "blockchain_snark",
    ],
    sig = ":_Blockchain_snark_state.cmi",
    struct = "blockchain_snark_state.ml",
    deps = BLOCKCHAIN_SNARK_DEPS,
    deps_opam = BLOCKCHAIN_SNARK_DEPS_OPAM
)

################
ocaml_signature(
    name = "_Blockchain_snark_state.cmi",
    src = "blockchain_snark_state.mli",
    opts = BLOCKCHAIN_SNARK_INTERFACE_OPTS,
    ppx = ":ppx1.exe",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "blockchain_snark",
    ],
    deps = BLOCKCHAIN_SNARK_DEPS,
    deps_opam = BLOCKCHAIN_SNARK_DEPS_OPAM
)

###############
ppx_executable(
    name = "ppx1.exe",
    main = "//bzl/ppx/exe:ppxlib_driver",
    deps = [
        "@mina//src/lib/ppx_coda",
        "@ppx_version//src:ppx_version",
        "@snarky//ppx:ppx_snarky",
    ],
    deps_opam = [
        "ppx_jane",
        "ppx_deriving.eq",
    ],
    deps_adjunct_opam = [
        "ppx_expect.collector",
        "ppx_hash.runtime-lib",
        "ppx_sexp_conv.runtime-lib",
        "ppx_deriving.runtime",
        "ppx_assert.runtime-lib",
        "ppx_compare.runtime-lib",
        "ppx_inline_test.runtime-lib",
        "ppx_bench.runtime-lib",
        "ppx_enumerate.runtime-lib",
        "ppx_module_timer.runtime",
    ]
)
